Update README and general cleanup

--- a/Advanced-Lane-Line-Tracking.ipynb
+++ b/Advanced-Lane-Line-Tracking.ipynb
@@ -15,21 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `cv2.COLOR_RGB2GRAY` if you've read in an image using `mpimg.imread()`. Use `cv2.COLOR_BGR2GRAY` if you've read in an image using `cv2.imread()`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pipeline Steps:\n",
-    "\n",
-    "1. Calibrate the incoming image to correct for camera distortion\n",
-    "1. Distort to bird's eye view\n",
-    "    1. Find the lane lines\n",
-    "    1. Find the closest and farthest points on each lane line\n",
-    "    1. Transform those points to be rectangular(?)\n",
-    "1. Use Sobel operator to detect roughly vertical lines?"
+    "# Advanced Lane Line Tracking "
    ]
   },
   {
@@ -121,13 +107,13 @@
     "img = plt.imread(filename)\n",
     "dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
     "\n",
-    "# f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
-    "# f.tight_layout()\n",
-    "# ax1.imshow(img)\n",
-    "# ax1.set_title('Original Image', fontsize=50)\n",
-    "# ax2.imshow(dst)\n",
-    "# ax2.set_title('Undistorted Image', fontsize=50)\n",
-    "# plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "ax1.imshow(img)\n",
+    "ax1.set_title('Original Image', fontsize=50)\n",
+    "ax2.imshow(dst)\n",
+    "ax2.set_title('Undistorted Image', fontsize=50)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   },
   {
@@ -159,29 +145,17 @@
     "n_images = len(list(PATH.iterdir()))\n",
     "row_len = 4\n",
     "\n",
-    "# fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(15,5))\n",
-    "# for i, ax in enumerate(axes.flat):\n",
-    "#     filename = list(PATH.iterdir())[i]\n",
-    "#     img = plt.imread(filename)\n",
-    "#     img = calibrate_image(img)\n",
-    "#     if img is None:\n",
-    "#         print('ERROR')\n",
-    "#         pdb.set_trace()\n",
-    "#     ax.imshow(img)\n",
-    "#     ax.set_title(str(filename).split('\\\\')[-1])\n",
-    "# plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PATH = Path('./test_images/')\n",
-    "# image = mpimg.imread(str(PATH/'test7.png'))\n",
-    "# image = calibrate_image(image)\n",
-    "# plt.imshow(image)"
+    "fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(15,5))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    filename = list(PATH.iterdir())[i]\n",
+    "    img = plt.imread(filename)\n",
+    "    img = calibrate_image(img)\n",
+    "    if img is None:\n",
+    "        print('ERROR')\n",
+    "        pdb.set_trace()\n",
+    "    ax.imshow(img)\n",
+    "    ax.set_title(str(filename).split('\\\\')[-1])\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -301,20 +275,20 @@
     "image_width = 80/row_len\n",
     "image = None\n",
     "\n",
-    "# fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
-    "# for i, ax in enumerate(axes.flat):\n",
-    "#     filename = list(PATH.iterdir())[i]\n",
-    "#     img = plt.imread(filename)\n",
-    "#     if img is None:\n",
-    "#         print('ERROR')\n",
-    "#         pdb.set_trace()\n",
+    "fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    filename = list(PATH.iterdir())[i]\n",
+    "    img = plt.imread(filename)\n",
+    "    if img is None:\n",
+    "        print('ERROR')\n",
+    "        pdb.set_trace()\n",
     "        \n",
-    "#     img = calibrate_image(img)\n",
-    "#     img = gradient_sobel(img)\n",
+    "    img = calibrate_image(img)\n",
+    "    img = gradient_sobel(img)\n",
     "\n",
-    "#     ax.imshow(img, cmap='gray')\n",
-    "#     ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
-    "# plt.tight_layout()"
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -367,20 +341,20 @@
     "image_width = 80/row_len\n",
     "image = None\n",
     "\n",
-    "# fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
-    "# for i, ax in enumerate(axes.flat):\n",
-    "#     filename = list(PATH.iterdir())[i]\n",
-    "#     img = plt.imread(filename)\n",
-    "#     if img is None:\n",
-    "#         print('ERROR')\n",
-    "#         pdb.set_trace()\n",
+    "fig,axes=plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    filename = list(PATH.iterdir())[i]\n",
+    "    img = plt.imread(filename)\n",
+    "    if img is None:\n",
+    "        print('ERROR')\n",
+    "        pdb.set_trace()\n",
     "        \n",
-    "#     img = calibrate_image(img)\n",
-    "#     img = color_transform(img)\n",
+    "    img = calibrate_image(img)\n",
+    "    img = color_transform(img)\n",
     "\n",
-    "#     ax.imshow(img, cmap='gray')\n",
-    "#     ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
-    "# plt.tight_layout()"
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -419,20 +393,20 @@
     "image_width = 80/row_len\n",
     "image = None\n",
     "\n",
-    "# fig, axes = plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
-    "# for i, ax in enumerate(axes.flat):\n",
-    "#     filename = list(PATH.iterdir())[i]\n",
-    "#     img = plt.imread(filename)\n",
-    "#     if img is None:\n",
-    "#         print('ERROR')\n",
-    "#         pdb.set_trace()\n",
+    "fig, axes = plt.subplots(n_images//row_len, row_len, figsize=(image_width,image_width/1.2))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    filename = list(PATH.iterdir())[i]\n",
+    "    img = plt.imread(filename)\n",
+    "    if img is None:\n",
+    "        print('ERROR')\n",
+    "        pdb.set_trace()\n",
     "        \n",
-    "#     img = calibrate_image(img)\n",
-    "#     img = gradient_plus_color_transform(img)\n",
+    "    img = calibrate_image(img)\n",
+    "    img = gradient_plus_color_transform(img)\n",
     "\n",
-    "#     ax.imshow(img, cmap='gray')\n",
-    "#     ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
-    "# plt.tight_layout()"
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -456,8 +430,8 @@
     "w = 1280\n",
     "h = 720\n",
     "\n",
-    "# fig, ax = plt.subplots(figsize=(40, 20))\n",
-    "# ax.imshow(img, cmap='gray') \n",
+    "fig, ax = plt.subplots(figsize=(40, 20))\n",
+    "ax.imshow(img, cmap='gray') \n",
     "\n",
     "offset = w*.25\n",
     "dst = np.float32(\n",
@@ -466,7 +440,6 @@
     "[w*.25, h], # Bottom left\n",
     "[w*.75, h]]) # Bottom right\n",
     "\n",
-    "## Stealing from youtube...\n",
     "mid_width = 0.08\n",
     "bot_width = 0.76\n",
     "height_pct = .62\n",
@@ -478,11 +451,11 @@
     "bottom_right = (w*(0.5+bot_width/2), h*bottom_trim)\n",
     "\n",
     "src = np.float32([top_left, top_right, bottom_left, bottom_right])\n",
-    "# for pt in src:\n",
-    "#     plt.plot(*pt,'bo',markersize=20)\n",
+    "for pt in src:\n",
+    "    plt.plot(*pt,'bo',markersize=20)\n",
     "    \n",
-    "# for pt in dst:\n",
-    "#     plt.plot(*pt,'ro',markersize=20)"
+    "for pt in dst:\n",
+    "    plt.plot(*pt,'ro',markersize=20)"
    ]
   },
   {
@@ -494,9 +467,9 @@
     "M = cv2.getPerspectiveTransform(src, dst)\n",
     "Minv = cv2.getPerspectiveTransform(dst, src)\n",
     "\n",
-    "# warped = cv2.warpPerspective(img, M, img_size, flags=cv2.INTER_LINEAR)\n",
-    "# fig, ax = plt.subplots(figsize=(40, 20))\n",
-    "# ax.imshow(warped, cmap='gray') "
+    "warped = cv2.warpPerspective(img, M, img_size, flags=cv2.INTER_LINEAR)\n",
+    "fig, ax = plt.subplots(figsize=(40, 20))\n",
+    "ax.imshow(warped, cmap='gray') "
    ]
   },
   {
@@ -512,21 +485,21 @@
     "plot_height = plot_width/1.2\n",
     "image = None\n",
     "\n",
-    "# fig, axes = plt.subplots(n_images//row_len, row_len, figsize=(plot_width,plot_height))\n",
-    "# for i, ax in enumerate(axes.flat):\n",
-    "#     filename = list(PATH.iterdir())[i]\n",
-    "#     img = plt.imread(filename)\n",
-    "#     if img is None:\n",
-    "#         print('ERROR')\n",
-    "#         pdb.set_trace()\n",
+    "fig, axes = plt.subplots(n_images//row_len, row_len, figsize=(plot_width,plot_height))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    filename = list(PATH.iterdir())[i]\n",
+    "    img = plt.imread(filename)\n",
+    "    if img is None:\n",
+    "        print('ERROR')\n",
+    "        pdb.set_trace()\n",
     "        \n",
-    "#     img = calibrate_image(img)\n",
-    "#     img = gradient_plus_color_transform(img)\n",
-    "#     img = cv2.warpPerspective(img, M, img.shape[::-1], flags=cv2.INTER_LINEAR)\n",
+    "    img = calibrate_image(img)\n",
+    "    img = gradient_plus_color_transform(img)\n",
+    "    img = cv2.warpPerspective(img, M, img.shape[::-1], flags=cv2.INTER_LINEAR)\n",
     "\n",
-    "#     ax.imshow(img, cmap='gray')\n",
-    "#     ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
-    "# plt.tight_layout()"
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.set_title(str(filename).split('\\\\')[-1], fontsize=25)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -538,19 +511,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = Path('./test_images/')\n",
-    "filename = str(PATH/'test4.jpg')\n",
-    "img = plt.imread(filename)\n",
-    "if img is None:\n",
-    "    print('ERROR')\n",
-    "    pdb.set_trace()\n",
-    "calibrated = calibrate_image(img)\n",
-    "binary = gradient_plus_color_transform(calibrated)\n",
-    "binary_warped = cv2.warpPerspective(binary, M, (w,h), flags=cv2.INTER_LINEAR).astype(np.uint8) # birds eye\n",
+    "xm_per_pix=4/384\n",
+    "ym_per_pix=10/720\n",
     "\n",
     "def graph_lane_lines(binary_warped):\n",
     "    ''' Takes in a binary birds eye image and returns the camera's\n",
@@ -588,10 +554,6 @@
     "        win_xleft_high = leftx_current + margin\n",
     "        win_xright_low = rightx_current - margin\n",
     "        win_xright_high = rightx_current + margin\n",
-    "        # Draw the windows on the visualization image\n",
-    "        #     cv2.rectangle(out_img,(win_xleft_low,win_y_low),(win_xleft_high,win_y_high),(0,255,0), 2)\n",
-    "        #     cv2.rectangle(out_img,(win_xright_low,win_y_low),(win_xright_high,win_y_high),(0,255,0), 2)\n",
-    "        # Identify the nonzero pixels in x and y within the window\n",
     "        good_left_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
     "        (nonzerox >= win_xleft_low) &  (nonzerox < win_xleft_high)).nonzero()[0]\n",
     "        good_right_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
@@ -627,7 +589,6 @@
     "    y_eval = np.max(ploty)\n",
     "    left_curverad = ((1 + (2*left_fit[0]*y_eval + left_fit[1])**2)**1.5) / np.absolute(2*left_fit[0])\n",
     "    right_curverad = ((1 + (2*right_fit[0]*y_eval + right_fit[1])**2)**1.5) / np.absolute(2*right_fit[0])\n",
-    "    # print(left_curverad, right_curverad)\n",
     "    avg_curve = np.mean([left_curverad, right_curverad])\n",
     "\n",
     "    left_line_window1 = np.array([np.transpose(np.vstack([left_fitx, ploty]))])\n",
@@ -635,23 +596,41 @@
     "    left_line_pts = np.hstack((left_line_window1, left_line_window2))\n",
     "\n",
     "    real_out_img = np.zeros_like(out_img)\n",
-    "    cv2.fillPoly(real_out_img, np.int_([left_line_pts]), (0,255, 0))\n",
+    "    cv2.fillPoly(real_out_img, np.int_([left_line_pts]), (0, 0, 255))\n",
     "    camera_perspective = cv2.warpPerspective(real_out_img, Minv, (w, h), flags=cv2.INTER_LINEAR)\n",
-    "    return camera_perspective\n",
-    "\n",
-    "# plt.plot(left_fitx, ploty, color='yellow')\n",
-    "# plt.plot(right_fitx, ploty, color='yellow')\n",
-    "# plt.xlim(0, 1280)\n",
-    "# plt.ylim(720, 0)\n",
-    "\n",
-    "\n",
-    "# result = cv2.addWeighted(camera_perspective, 0.3, img, 1, 0)\n",
-    "# plt.imshow(out_img)"
+    "    \n",
+    "    ### Add text to image regarding position and lane curvature\n",
+    "    camera_center = (left_fitx[-1] + right_fitx[-1])/2\n",
+    "    center_diff = (camera_center - w/2) * xm_per_pix\n",
+    "    side_pos = 'left' if center_diff < 0 else 'right'\n",
+    "    cv2.putText(camera_perspective, 'The Radius of Curvature = ' + str(round(avg_curve,3))+' (m) ',\n",
+    "        (50,50),cv2.FONT_HERSHEY_SIMPLEX,1,(255,255,255),2)\n",
+    "    cv2.putText(camera_perspective, 'The Vehicle is ' + str(abs(round(center_diff,3)))+'m ' + side_pos + ' of center',\n",
+    "        (50,100),cv2.FONT_HERSHEY_SIMPLEX,1,(255,255,255),2)\n",
+    "    \n",
+    "    ### Add a bird's eye view on the top right corner of the image with lane line markers\n",
+    "    small_birds_eye = np.zeros((h,w,3))\n",
+    "    left_line_window1 = np.array([np.transpose(np.vstack([left_fitx-25, ploty]))])\n",
+    "    left_line_window2 = np.array([np.flipud(np.transpose(np.vstack([left_fitx+25, \n",
+    "                                  ploty])))])\n",
+    "    left_line_pts = np.hstack((left_line_window1, left_line_window2))\n",
+    "    right_line_window1 = np.array([np.transpose(np.vstack([right_fitx-25, ploty]))])\n",
+    "    right_line_window2 = np.array([np.flipud(np.transpose(np.vstack([right_fitx+25, \n",
+    "                                  ploty])))])\n",
+    "    right_line_pts = np.hstack((right_line_window1, right_line_window2))\n",
+    "    \n",
+    "    cv2.fillPoly(small_birds_eye, np.int_([left_line_pts]), (255,255,255))\n",
+    "    cv2.fillPoly(small_birds_eye, np.int_([right_line_pts]),(255,255,255))\n",
+    "    small_birds_eye = cv2.resize(small_birds_eye, (0,0), fx=0.3, fy=0.3)\n",
+    "    camera_perspective[0:small_birds_eye.shape[0], 1280-small_birds_eye.shape[1]:] = small_birds_eye \n",
+    "    \n",
+    "    \n",
+    "    return camera_perspective"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,14 +638,15 @@
     "    calibrated = calibrate_image(img)\n",
     "    binary = gradient_plus_color_transform(calibrated)\n",
     "    binary_warped = cv2.warpPerspective(binary, M, (w,h), flags=cv2.INTER_LINEAR).astype(np.uint8) \n",
-    "    green_polygon = graph_lane_lines(binary_warped)\n",
-    "    result = cv2.addWeighted(green_polygon, 0.3, img, 1, 0)\n",
+    "    polygon = graph_lane_lines(binary_warped)\n",
+    "    result = cv2.addWeighted(polygon, 0.5, img, 1, 0)\n",
+    "    plt.imsave('final.png',result)\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████▉| 1260/1261 [07:00<00:00,  2.90it/s]\n"
+      " 96%|██████████████████████████████████████████████████████████████████████████████▊   | 25/26 [00:18<00:00,  1.38it/s]\n"
      ]
     },
     {
@@ -691,14 +671,14 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: output_images/video.mp4 \n",
       "\n",
-      "Wall time: 7min 1s\n"
+      "Wall time: 19.8 s\n"
      ]
     }
    ],
    "source": [
     "output_file = 'output_images/video.mp4'\n",
-    "# input_clip = VideoFileClip('src/project_video.mp4').subclip(0,5)\n",
-    "input_clip = VideoFileClip(\"src/project_video.mp4\")\n",
+    "input_clip = VideoFileClip('src/project_video.mp4').subclip(1,2)\n",
+    "# input_clip = VideoFileClip(\"src/project_video.mp4\")\n",
     "output_clip = input_clip.fl_image(process_image) # NOTE: this function expects color images\n",
     "%time output_clip.write_videofile(output_file, audio=False)\n",
     "\n",
@@ -710,39 +690,6 @@
     "\n",
     "del input_clip\n",
     "del output_clip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `fl_image` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "?fl_image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clip1.reader.close()\n",
-    "clip1.audio.reader.close_proc()\n",
-    "\n",
-    "white_clip.reader.close()\n",
-    "white_clip.audio.reader.close_proc()\n",
-    "\n",
-    "del clip1\n",
-    "del white_clip"
    ]
   }
  ],
